[package]
name = "exvm"
version = "0.1.0"
authors = ["Adel Prokurov <adel.prokurov@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser","memoryapi","errhandlingapi","sysinfoapi"] }
kernel32-sys = "0.2"