[package]
name = "exvm"
version = "0.1.0"
authors = ["Adel Prokurov <adel.prokurov@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
capstone = "0.6"
jazz-jit = {path = "jazz-jit"}

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser","memoryapi","errhandlingapi","sysinfoapi"] }
kernel32-sys = "0.2"
[profile.dev]
opt-level = 0
debug = true
lto = false
rpath = false
debug-assertions = true
codegen-units = 1
panic = 'unwind'

