[package]
name = "jazz-jit"
version = "0.1.0"
authors = ["playXE <adel.prokurov@protonmail.com>"]
edition = "2018"

[dependencies]
libc = "0.2"
byteorder = "1.3.2"
capstone = "0.6.0"
paste = "0.1.6"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser","memoryapi","errhandlingapi","sysinfoapi"] }
kernel32-sys = "0.2"